fix spacing of charts

--- a/frontend/src/stylesheet/dashboard.scss
+++ b/frontend/src/stylesheet/dashboard.scss
@@ -16,6 +16,13 @@
   box-shadow: 3px 3px 10px 4px rgba(0, 0, 0, 0.2);
 }
 
+.chart-wrapper{
+
+  .recharts-wrapper{
+    height: 50px;
+  }
+}
+
 .recent-trans-table ul {
   list-style: none;
   padding: 0;
